# Ina

./: 404.html  README.md  SUBMISSION-README-POLKADOT.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
contracts-ink/: README.md
contracts-ink/ina_journal/: Cargo.toml  lib.rs
ina-backend/: .gitignore  package.json  pnpm-lock.yaml
ina-backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
ina-backend/src/common/: app-error.filter.ts  app.constant.ts  auditLogger.middleware.ts  environment.ts  error-codes.constant.ts  filter.ts  jwt.strategy.ts  response.constant.ts  response.interceptor.ts
ina-backend/src/module/v1/database/: database.module.ts
ina-backend/src/module/v1/journal/: journal.controller.ts  journal.module.ts  journal.service.ts
ina-backend/src/module/v1/journal/dto/: journal.dto.ts
ina-backend/src/module/v1/journal/enums/: journal.enum.ts
ina-backend/src/module/v1/journal/schema/: journal.schema.ts
ina-backend/src/module/v1/user/: user.module.ts
ina-contracts/: README.md
ina-contracts/journal/: Cargo.toml  README.md  info.json
ina-contracts/journal/src/: lib.rs  types.rs
ina-contracts/unchainher-nft/: Cargo.toml  README.md  unchainher_nft_abi.json
ina-contracts/unchainher-nft/src/: lib.rs
ina-smart-contracts/: Cargo.toml  Dockerfile  README.md  info.json
ina-smart-contracts/src/: lib.rs  types.rs
src/: App.jsx  index.css
src/Choose/: ChooseStyle.jsx
src/Components/: AnimatedButton.jsx  Footer.jsx  Header.jsx  MoodChart.jsx  WalletConnect.jsx
src/Pages/: Home.jsx  Pages.jsx
src/Pages/Journal/: Account.jsx  BottomNav.jsx  Journal.jsx
src/Pages/Journal/Resources/: Mint.jsx  NewJournal.jsx  UserCircles.jsx  UserStreak.jsx  Vault.jsx
src/Pages/SignUp/: SignUp.jsx
src/SigIn/: SignIn.jsx
src/api/: journal.js
src/circle-component/: Circle.jsx
src/flashscreen/: Page1.jsx  Page2.jsx  Page3.jsx  Page4.jsx  Page5.jsx  Page6.jsx  Page7.jsx
src/ipfs/: web3Storage.js
src/lib/: Images.jsx
src/polkadot/: config.js  contract.js  sign.js  wallet.js
src/profile/: Profile.jsx
src/utils/: crypto.js
(+4 files in other folders)
