[package]
name = "unchain-journal-contract"
description = "..."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Penivera/UnchainHer-Contracts/journal"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.15.0-rust-1.86.0"
image_digest = "sha256:aad208b09976f643b56104cc6af87fbb03afadff2e76f9e5e3fa283969e15f8b"

passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = "5.14.0"
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.8.22" 
borsh = "0.10.4" 
near-contract-standards = "5.15.1"
imp = "0.1.0"
getrandom = { version = "0.2.16", features = ["js"] }
near-workspaces = { version = "0.20", optional = true }

[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["unit-testing"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"

[features]
default = []
sandbox = ["near-workspaces"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
near-workspaces = { version = "0.20" ,optional = true}

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
